# precompiled-grpc-in-bazel-python

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  DEVELOPMENT.md  MODULE.bazel  README.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: ci.yml
modules/example_protos/: BUILD.bazel  MODULE.bazel  greeter.proto  thing.proto
tools/: BUILD.bazel  requirements.txt
tools/format/: BUILD.bazel
