load("//thirdparty/rules_proto_grpc:defs.bzl", "python_grpc_compile")

python_grpc_compile(
    name = "thing_python_grpc",
    protos = ["@rules_proto_grpc_example_protos//:thing_proto"],
)

python_grpc_compile(
    name = "greeter_python_grpc",
    protos = ["@rules_proto_grpc_example_protos//:greeter_grpc"],
)

# Convenience alias for formatting - run with: bazel run //:format
alias(
    name = "format",
    actual = "//tools/format",
)