bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_example_protos", version = "0.0.0.rpg.version.placeholder")
local_path_override(
    module_name = "rules_proto_grpc_example_protos",
    path = "modules/example_protos",
)

# Use wrapper script to filter out --option_dependencies flag
# rules_proto 7.x uses --option_dependencies which requires protoc 32.0+
# but grpcio-tools bundles protoc ~28.x. The wrapper script filters this flag.
single_version_override(
    module_name = "toolchains_protoc",
    version = "0.6.1",
)

bazel_dep(name = "grpc", version = "1.76.0.bcr.1")

# https://github.com/rules-proto-grpc/rules_proto_grpc/issues/341#issuecomment-2265154147
single_version_override(
    module_name = "grpc-java",
    version = "1.64.0",
)

bazel_dep(name = "rules_python", version = "1.8.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

bazel_dep(name = "rules_uv", version = "0.89.2")

dev_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
dev_pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//tools:requirements.txt",
)
use_repo(dev_pip, "pypi")

register_toolchains(
    # Note additional _toolchain suffix here or just use `:all` to avoid this mistake.
    "//thirdparty/rules_proto_grpc:prebuilt_protoc_toolchain_with_grpc_plugin_toolchain",
    "//thirdparty/rules_proto_grpc:prebuilt_protoc_toolchain_with_grpc_plugin_proto_toolchain",
)

# For formatting rules
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
